# alpha-validation-lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.pt-br.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DATA_CARD.md  MODEL_CARD.md
notebooks/: 00_overview.ipynb
reports/: backtest_report.md  horizon_study_report.md  target_study_report.md  validation_report.md  vol_economics_report.md
src/: __init__.py
src/backtest/: __init__.py  confidence.py  engine.py  metrics.py  plotting.py  report.py  strategies.py
src/data/: __init__.py  binance_client.py  database.py
src/economics/: __init__.py  pipeline.py  report.py  strategies.py  study.py
src/experiments/: __init__.py  horizon_study.py  plots.py  report.py  stats_validity.py  target_report.py  target_study.py  targets.py
src/features/: __init__.py  indicators.py
src/model/: __init__.py  dataset.py  predictor.py  trainer.py
src/tracking/: __init__.py  evaluator.py
src/validation/: __init__.py  deflated_sharpe.py  purged_cv.py  report.py  vol_validation.py
src/web/: __init__.py  app.py
src/web/templates/: index.html
tests/: conftest.py  test_engine.py  test_indicators.py  test_metrics_and_stats.py  test_no_leakage.py  test_purged_cv.py
