[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-validation-lab"
version = "0.2.0"
description = "Statistical & economic validation framework for crypto market hypotheses — BTC case study (Predictability ≠ Profitability)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Caio G." }]
keywords = ["quantitative-research", "backtesting", "machine-learning",
            "time-series", "volatility", "market-microstructure"]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "Flask>=3.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
alpha-lab = "main:main"

# 'src' é um pacote namespace local; os módulos são importados como `src.*`
# e `config`/`main` ficam na raiz do projeto.
[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
include = ["src*"]

# --- Ferramentas ----------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",  # comprimento de linha gerido manualmente em docstrings PT-BR
    "E702",  # ';' em chamadas compactas de matplotlib (estilo deliberado nos plots)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
